fixed page overflow by setting footer width to 100% from 100vw.

--- a/public/footer.css
+++ b/public/footer.css
@@ -2,7 +2,7 @@ footer {
     margin-top: auto;
     padding-top: 150px;
     padding-bottom: 20px;
-    width: 100vw;
+    width: 100%;
     text-align: center;
     justify-self: flex-end;
 }
